# synapse-python

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  compile_protos.py  controller_config.json  fast_plot.py  package-lock.json  pyproject.toml  release-please-config.json  release-please-config.yaml  requirements.txt  setup.py  setup.sh  test_config.json  test_config_blackrock.json  test_query.json  virtual_config.json
.github/workflows/: build.yml  cla-check.yml  main.yml  release-please.yml  release.yml
examples/: stream_out_electrical_broadband.py
model-converter/: convert.py
scripts/: gen_protos.py  install-zeromq.sh  setup-target-device.sh
src/: synapse_ctl.py
src/synapse_ctl/: synapse_ctl.py
synapse/: __init__.py  _api_version.py  channel.py  channel_mask.py  config.py  device.py  node.py
synapse/cli/: __init__.py  __main__.py  apps.py  build.py  config.py  deploy.py  deploy_model.py  device_info_display.py  discover.py  files.py  gateware.py  impedance_csv.py  main.py  offline_hdf5_plotter.py  offline_plot.py  peripherals.py  query.py  rpc.py  scifi_wifi_config.py  settings.py  streaming.py  streaming_bkup.py  synapse_plotter.py  tap_listen.py  taps.py  updated_stream_plot.py  updated_streaming.py  upload.py  wifi_config.py
synapse/client/: __init__.py  channel.py  config.py  controller_recv_demo.py  device.py  impedance.py  node.py  protobuf_helpers.py  query.py  settings.py  sftp.py  signal_config.py  taps.py
synapse/client/nodes/: __init__.py  application_node.py  broadband_source.py  controller.py  disk_writer.py  electrical_broadband.py  electrical_stim.py  electrical_stimulation.py  image_sink.py  (+11 more)
synapse/examples/: stream_out.py  tap_example.py
synapse/ndtp/: __init__.py  depacketizer.py  packet.py
synapse/nodes/: electrical_broadband.py  optical_stimulation.py  stream_in.py  stream_out.py
synapse/server/: __init__.py  __main__.py  autodiscovery.py  entrypoint.py  main.py  rpc.py  status.py
synapse/simulator/: __init__.py  __main__.py
synapse/synapse-api/: README.md
synapse/tests/: blink_ostim.py  doom_clip_64x32.avi  doom_synapse.py  stream_lsb.py  test_input_config.json  test_ndtp.py  test_record_config.json  test_stream_out.py
synapse/utils/: datatypes.py  discover.py  file.py  logging.py  ndtp.py  ndtp.pyx  ndtp_types.py  packet_monitor.py  proto.py  setup.py  time_sync.py  time_sync_server.py  types.py  version.py
synapsectl/: Makefile  README.md
(+62 files in other folders)
