[project]
name = "synapse"
version = "0.1.0"
description = "Client library and CLI for the Synapse API"
authors = [
    {name = "Science Team", email = "team@science.xyz"},
]
dependencies = [
    "grpcio-tools",
    "protoletariat",
    "pyserial"
]
readme = "README.md"
license = {text = "TBD"}

[tool.pdm.dev-dependencies]
dev = [
    "pytest"
]

[tool.pdm]
distribution = false

[project.scripts]
synapsectl = "synapse.cli:main"
synapse-sim = "synapse.simulator:main"

[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.0", "cmake>=3.14"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { exclude = ["config", "data"] } }
