[project]
name = "science-synapse"
version = "0.9.1"
description = "Client library and CLI for the Synapse API"
authors = [
    {name = "Science Team", email = "team@science.xyz"},
]
dependencies = [
    "grpcio-tools",
    "protoletariat",
    "pyserial"
]
readme = "README.md"
license = {file = "LICENSE"}

[projects.urls]
Homepage = "https://github.com/sciencecorp/synapse-python"
Documentation = "https://science.xyz/docs/d/synapse/index"

[tool.pdm.dev-dependencies]
dev = [
    "pytest"
]

[tool.pdm]
distribution = false

[project.scripts]
synapsectl = "synapse.cli:main"
synapse-sim = "synapse.simulator:main"

[tool.setuptools]
packages = { find = { exclude = ["config", "data"] } }
